# scanandorganize

./: .gitignore  README.md  basic_scanner.spec  basic_scanner_mac.spec  build.bat  config.example.yaml  config.yaml  conftest.py  install.bat  install.ps1  install_gui.bat  install_gui.py  install_gui.vbs  launcher.py  pyproject.toml  requirements.txt  scan_gui.bat  scan_gui.py  scan_gui.vbs  verify.bat  verify.ps1  verify.vbs
.github/workflows/: build-mac.yml
src/basic_scanner/: __init__.py  __main__.py  classify.py  config.py  extract.py  logging_conf.py  main.py  models.py  mover.py  ocr.py  rules.py  suppliers.py  watcher.py
src/basic_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_extract.py  test_rules.py  test_watcher_stability.py
